--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
     "@shopify/shopify-api": "^2.1.0",
     "framer-motion": "^6.2.9",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sharp": "^0.30.4"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
