--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "@lottiefiles/react-lottie-player": "^3.4.4",
     "@shopify/shopify-api": "^2.1.0",
     "framer-motion": "^6.2.9",
     "next": "latest",
